@@ -212,5 +212,7 @@ namespace Orthanc
     }
 
     uint64_t IncrementGlobalSequence(GlobalProperty property);
+
+    void ClearTable(const std::string& tableName);
   };
 }
